--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
    "cSpell.words": [
+      "akitas",
       "hasher",
       "Itertools",
       "robo",
-      "santas"
+      "santas",
+      "vizslas"
    ],
    "editor.tabSize": 4
 }
