--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.13.0"
+lazy_static = "1.5.0"
 md-5 = "0.10.6"
 regex = "1.10"
 serde_json = "1.0.124"
