add basic grid struct

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
    "cSpell.words": [
       "akitas",
       "hasher",
+      "icols",
+      "iget",
+      "irows",
       "Itertools",
       "replacen",
       "rfind",
